# NIR

./: .~lock.НИР Дунайцев реферат.doc#  README.md  НИР Дунайцев реферат.doc
polygonal/: CMakeLists.txt
polygonal/project/: main.cpp
polygonal/project/include/: PolygonalNumber.h  WindowManager.h
polygonal/project/src/: PolygonalNumber.cpp  WindowManager.cpp
